--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,18 @@
   <groupId>clinic.programmming</groupId>
   <artifactId>example</artifactId>
   <version>1.0</version>
-<properties>
-    <maven.compiler.source>7</maven.compiler.source>
-    <maven.compiler.target>7</maven.compiler.target>
-</properties>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.14.0</version>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
 
